<resources>
    <string name="app_name">iCareDBSYS32_MOBILE</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Pets">Pets</string>
    <string name="Contact">Contact</string>
    <string name="Profile">Profile</string>
    <string name="Service">Service</string>
    <string name="Services">Available Services</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="ServiceCode">Service Type</string>
    <string name="ServicePrice">Service Price</string>
    <string name="VaxType">Vaccine Type</string>
    <string name="Owner">Pet Owner</string>
    <string name="ScheduleDate">Schedule Date</string>
    <string name="Pet">Pet</string>
    <string name="Venue">Venue</string>
    <string name="inquiries">For more inquiries</string>
    <string name="municipalities">
6060 Different municipalities and within Cebu City</string>
    <string name="contactNo">+91 22-27782183</string>
    <string name="messenger">\@iCarePetservice@gmail.com</string>
    <string name="facebook">iCarePetservice@yahoo.com</string>
    <string name="registry_date">Registry Date</string>
    <string name="fullname">fullname</string>
    <string name="update">Update</string>
    <string name="transaction">Transactions</string>
    <string name="remove">Remove</string>
</resources>