<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:contentPadding="5dp"
    android:background="@color/cyan"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/transaction_card_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/Service"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/transaction_card_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="25sp"
            android:text="@string/ScheduleDate"/>

        <TextView
            android:id="@+id/transaction_card_venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Venue"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/transaction_card_service"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/transaction_card_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Service"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/transaction_card_date"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>